--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 
     <div id="social">
 
-        <a href="https://github.com/GustavoNascimentoPrado" target="_blank">
+        <a href="https://github.com/GustavonscDev" target="_blank">
           <ion-icon name="logo-github"> </ion-icon> 
         </a>
      <a href="https://www.instagram.com/lz.g__/" target="_blank">
       <ion-icon name="logo-instagram"></ion-icon>
     </a>
 
-     <a href="" target="_blank">  
+     <a href="https://www.youtube.com/channel/UCn9bw7854ZgS8wowrqneb9A" target="_blank">  
        <ion-icon name="logo-youtube"></ion-icon>
      </a>
      
