add link whatsapp

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <div id="profile">
         <img src="./assets/avatar.png" alt="Foto de perfil de Gustavo Nascimento.">
-        <p>@lz.g__</p>
+        <p>Gustavo Nascimeneto</p>
       </div>
 
       <div id="swith" onclick="toggleMode()">
@@ -62,7 +62,7 @@
        <ion-icon name="logo-youtube"></ion-icon>
      </a>
      
-      <a href="https://w.app/nwwsee" target="_blank">  
+      <a href="https://wa.me/5521975588848" target="_blank">  
         <ion-icon name="logo-whatsapp"></ion-icon>
       </a>
 
